--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -519,7 +519,17 @@
 }
 @media screen and (max-width: 960px) {
   .main-visual-inner-memorial {
+    background-image: url("../images/junenji_memorial_mv_tablet.png");
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
     height: 400px;
+  }
+}
+@media screen and (max-width: 520px) {
+  .main-visual-inner-memorial {
+    height: 327px;
+    background-position: center center;
   }
 }
 .main-visual-inner-memorial-title {
@@ -543,8 +553,16 @@
 @media screen and (max-width: 960px) {
   .main-visual-inner-memorial-title {
     border: 1px solid #FFFFFF;
-    width: 40%;
+    width: 50%;
     font-size: 3.4rem;
+  }
+}
+@media screen and (max-width: 520px) {
+  .main-visual-inner-memorial-title {
+    padding-top: 5%;
+    padding-bottom: 5%;
+    width: 65%;
+    font-size: 2rem;
   }
 }
 .main-contents {
@@ -556,9 +574,19 @@
   background-image: url("../images/bg.png");
   background-repeat: repeat;
 }
+@media screen and (max-width: 520px) {
+  .main-bg {
+    background-image: url("../images/bg_mb.png");
+  }
+}
 .main-bg2 {
   background-image: url("../images/bg2.png");
   background-repeat: repeat;
+}
+@media screen and (max-width: 520px) {
+  .main-bg2 {
+    background-image: url("../images/bg2_mb.png");
+  }
 }
 .main-bg3 {
   background-color: #FFFFFF;
@@ -666,6 +694,11 @@
     font-size: 4rem;
   }
 }
+@media screen and (max-width: 520px) {
+  .main-about-contents-title-memorial {
+    font-size: 2.7rem;
+  }
+}
 .main-about-contents-text {
   margin-top: 45px;
   font-size: 1.8rem;
@@ -694,6 +727,13 @@
     margin-top: 40px;
     font-size: 2rem;
     line-height: 1.8;
+  }
+}
+@media screen and (max-width: 520px) {
+  .main-about-contents-text-memorial {
+    margin-top: 20px;
+    font-size: 1.4rem;
+    line-height: 1.4285714286;
   }
 }
 .main-about-contents-button {
@@ -924,6 +964,12 @@
     padding-bottom: 100px;
   }
 }
+@media screen and (max-width: 520px) {
+  .main-video-memorial {
+    padding-top: 57px;
+    padding-bottom: 57px;
+  }
+}
 .main-video-memorial-video {
   width: 100%;
   max-width: 1320px;
@@ -932,6 +978,11 @@
 @media screen and (max-width: 960px) {
   .main-video-memorial-video {
     height: 390px;
+  }
+}
+@media screen and (max-width: 520px) {
+  .main-video-memorial-video {
+    height: 190px;
   }
 }
 .main-video-memorial-text {
@@ -943,6 +994,13 @@
     margin-top: 45px;
     font-size: 1.7rem;
     font-weight: bold;
+  }
+}
+@media screen and (max-width: 520px) {
+  .main-video-memorial-text {
+    margin-top: 22px;
+    font-size: 1.3rem;
+    line-height: 1.4615384615;
   }
 }
 .main-video-memorial-button {
@@ -962,10 +1020,22 @@
     padding: 23px 92px;
   }
 }
+@media screen and (max-width: 520px) {
+  .main-video-memorial-button {
+    margin-top: 30px;
+    padding: 10px 60px;
+    border-width: 2px;
+  }
+}
 @media screen and (max-width: 960px) {
   .main-video-memorial-button:before {
     font-size: 2.3rem;
     content: "お問い合わせ";
+  }
+}
+@media screen and (max-width: 520px) {
+  .main-video-memorial-button:before {
+    font-size: 1.9rem;
   }
 }
 .main-traffic {
@@ -1100,6 +1170,12 @@
     margin: 0 auto;
   }
 }
+@media screen and (max-width: 520px) {
+  .main-accept {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
+}
 .main-accept-title {
   font-size: 4.5rem;
   font-weight: bold;
@@ -1118,11 +1194,14 @@
     border: none;
   }
 }
+@media screen and (max-width: 520px) {
+  .main-accept-title {
+    font-size: 2.3rem;
+  }
+}
 .main-accept-list {
-  list-style-image: url("../images/list-icon.png");
   display: flex;
   flex-wrap: wrap;
-  margin-left: 40px;
   margin-top: 100px;
 }
 @media screen and (max-width: 960px) {
@@ -1131,9 +1210,30 @@
     margin: 60px auto 0;
   }
 }
+@media screen and (max-width: 520px) {
+  .main-accept-list {
+    width: 60%;
+    margin-top: 40px;
+  }
+}
+.main-accept-list li {
+  background-image: url("../images/list-icon.png");
+  background-position: top left;
+  background-repeat: no-repeat;
+  background-size: auto;
+  padding-left: 50px;
+  line-height: 0.75;
+}
 @media screen and (max-width: 960px) {
   .main-accept-list li {
-    padding-left: 20px;
+    line-height: 2;
+  }
+}
+@media screen and (max-width: 520px) {
+  .main-accept-list li {
+    background-size: 22px;
+    padding-left: 30px;
+    line-height: 1.5;
   }
 }
 .main-accept-item {
@@ -1145,9 +1245,16 @@
 @media screen and (max-width: 960px) {
   .main-accept-item {
     width: 100%;
+    height: 40px;
     font-size: 2.1rem;
     margin-bottom: 26px;
-    margin-left: 40px;
+  }
+}
+@media screen and (max-width: 520px) {
+  .main-accept-item {
+    height: 23px;
+    font-size: 1.5rem;
+    margin-bottom: 10px;
   }
 }
 @media screen and (max-width: 960px) {
