--- a/assets/scss/_main.scss
+++ b/assets/scss/_main.scss
@@ -93,6 +93,12 @@
 					height: 327px;
 				}
 			}
+
+			&-traffic {
+				@extend .main-visual-inner-memorial;
+				@include mixin.SetBackGroundImage("../images/junenji_traffic_mv.png");
+			}
+
 		}
 	}
 
@@ -186,6 +192,7 @@
 		}
 
 		&-contents {
+			width: 100%;
 			&-title {
 				@include mixin.FontSize(45px);
 				font-weight: bold;
@@ -226,6 +233,8 @@
 				}
 
 				&-grave {
+					text-align: center;
+
 					@include tablet {
 						margin-top: 0;
 						@include mixin.FontSize(30px);
@@ -368,6 +377,37 @@
 			@include mobile {
 				padding-top: 57px;
 				padding-bottom: 94px;
+			}
+		}
+
+		&-traffic {
+			&-map {
+				margin-top: 70px;
+				height: 560px !important;		// うぅ・・・
+			}
+
+			&-button {
+				display: block;
+				margin: 70px auto 0;
+
+				width: 32%;
+				padding: 2% 6%;
+				padding-right: 4%;
+
+				@include mixin.FontSize(25px);
+				border: 2px solid var.$card-border-color-tablet;
+
+				img {
+					margin-left: 13px;
+				}
+			}
+
+			&-text {
+				margin-top: 50px;
+
+				@include mixin.FontSize(20px);
+				@include mixin.LineHeight(20, 36);
+				text-align: center;
 			}
 		}
 	}
@@ -875,6 +915,21 @@
 		}
 	}
 
+	&-parking {
+
+		&-image {
+			margin-top: 90px;
+			height: 650px;
+		}
+
+		&-text {
+			margin-top: 70px;
+
+			@include mixin.FontSize(20px);
+		}
+	}
+
+
 	&-accept {
 		position: relative;
 		padding-top: 150px;
@@ -977,7 +1032,6 @@
 			}
 		}
 	}
-
 
 	&-slider {
 		@include tablet {
