--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -865,6 +865,12 @@
     padding-bottom: 100px;
   }
 }
+@media screen and (max-width: 520px) {
+  .main-about-traffic {
+    padding-top: 57px;
+    padding-bottom: 94px;
+  }
+}
 .main-about-traffic-pc {
   display: block;
 }
@@ -890,6 +896,13 @@
     height: 500px !important;
   }
 }
+@media screen and (max-width: 520px) {
+  .main-about-traffic-map {
+    margin-top: 52px !important;
+    height: 330px !important;
+    border: 1px solid #707070;
+  }
+}
 .main-about-traffic-button {
   display: block;
   position: relative;
@@ -909,13 +922,28 @@
     font-weight: bold;
   }
 }
+@media screen and (max-width: 520px) {
+  .main-about-traffic-button {
+    margin-top: 30px;
+    width: 93%;
+    padding: 5% 6%;
+    font-size: 2rem;
+    text-align: center;
+  }
+}
+@media screen and (max-width: 280px) {
+  .main-about-traffic-button {
+    padding: 6%;
+    font-size: 1.7rem;
+  }
+}
 .main-about-traffic-button img {
   position: absolute;
   right: 10%;
 }
-@media screen and (max-width: 960px) {
+@media screen and (max-width: 280px) {
   .main-about-traffic-button img {
-    margin-left: 20px;
+    right: 2%;
   }
 }
 .main-about-traffic-text {
@@ -928,6 +956,12 @@
   .main-about-traffic-text {
     font-size: 1.7rem;
     font-weight: bold;
+  }
+}
+@media screen and (max-width: 520px) {
+  .main-about-traffic-text {
+    margin-top: 30px;
+    font-size: 1.6rem;
   }
 }
 @media screen and (max-width: 960px) {
@@ -1427,6 +1461,12 @@
   width: 93%;
   margin: 0 auto;
 }
+@media screen and (max-width: 520px) {
+  .main-parking {
+    padding-top: 57px;
+    padding-bottom: 94px;
+  }
+}
 .main-parking-image {
   margin-top: 90px;
   height: 650px;
@@ -1434,6 +1474,12 @@
 @media screen and (max-width: 960px) {
   .main-parking-image {
     height: 390px;
+  }
+}
+@media screen and (max-width: 520px) {
+  .main-parking-image {
+    margin-top: 52px;
+    height: 190px;
   }
 }
 .main-parking-text {
@@ -1447,6 +1493,13 @@
     font-size: 1.7rem;
     line-height: 1.7647058824;
     font-weight: bold;
+  }
+}
+@media screen and (max-width: 520px) {
+  .main-parking-text {
+    margin-top: 30px;
+    font-size: 1.3rem;
+    line-height: 1.6923076923;
   }
 }
 .main-accept {
