--- a/assets/scss/_main.scss
+++ b/assets/scss/_main.scss
@@ -99,6 +99,11 @@
 				@include mixin.SetBackGroundImage("../images/junenji_traffic_mv.png");
 			}
 
+			&-event {
+				@extend .main-visual-inner-memorial;
+				@include mixin.SetBackGroundImage("../images/junenji_event_mv.png");
+			}
+
 		}
 	}
 
@@ -483,6 +488,45 @@
 					margin-top: 30px;
 
 					@include mixin.FontSize(16px);
+				}
+			}
+		}
+
+		&-event {
+			&-list {
+				position: relative;
+
+				margin-top: 80px;
+			}
+			&-item {
+				display: flex;
+				flex-wrap: wrap;
+				width: 100%;
+
+				&-left, &-right {
+					width: 50%;
+
+					padding-top: 28px;
+					padding-bottom: 28px;
+					border-bottom: 1px solid var.$button-memorial-contact-border-color;
+
+					@include mixin.FontSize(25px);
+					font-weight: var.$font-bold-semiBold;
+
+				}
+			}
+			
+			&-text {
+				display: flex;
+				justify-content: center;
+				align-items: center;
+				margin-top: 70px;
+
+				p {
+					@include mixin.FontSize(28px);
+					font-weight: var.$font-bold-semiBold;
+
+					margin-left: 10px;
 				}
 			}
 		}
@@ -1135,6 +1179,65 @@
 				@include mixin.FontSize(15px);
 
 				margin-bottom: 10px;
+			}
+		}
+	}
+
+	&-fes {
+		padding-bottom: 150px;
+
+		&-video {
+			margin-top: 80px;
+		}
+
+		&-text {
+			margin-top: 70px;
+
+			@include mixin.FontSize(20px);
+			@include mixin.LineHeight(20, 36);
+		}
+	}
+
+	&-event {
+		&-slider {
+			position: relative;
+
+			padding-top: 150px;
+			padding-bottom: 200px;
+
+			&-title {
+				width: 80%;
+				margin: 0 auto;
+				padding-top: 33px;
+				padding-bottom: 33px;
+				border: 2px solid var.$button-memorial-contact-border-color;
+
+				@include mixin.FontSize(45px);
+				font-weight: bold;
+				text-align: center;
+			}
+
+			&-for {
+				margin-top: 80px;
+			}
+
+			&-nav {
+				margin-top: 30px;
+
+				&-item {
+					margin-right: 30px;
+
+					&:last-of-type {
+						margin-right: 0;
+					}
+				}
+			}
+
+			&-text {
+				margin-top: 80px;
+
+				@include mixin.FontSize(20px);
+				@include mixin.LineHeight(20, 36);
 			}
 		}
 	}
